--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -99,7 +99,7 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
 							<th class="empty-column" rowspan="2"></th>
@@ -604,7 +604,7 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered elcm-table">
+                <table class="table elcm-table">
                     <thead>
                         <tr>
                             <th colspan="19">Cabos</th>
@@ -655,7 +655,7 @@
                         </tr>
 					</tbody>
 				</table>
-				<table class="table table-bordered elcm-table">
+				<table class="table elcm-table">
                     <thead>
                         <tr>
                             <th colspan="5">Barramentos</th>
@@ -697,7 +697,7 @@
 	<div class="container bg-gray-light" style="margin-bottom: 0px;">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th>Corrente nominal</br>de disparo (A)</th>
@@ -751,7 +751,7 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table elcm-table-bottom">
+                <table class="table table-bottom">
                     <tbody>
                         <tr class="header-row">
                             <td colspan="2" class="header-column"></td>
@@ -873,7 +873,7 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table elcm-table-bottom">
+                <table class="table table-bottom">
                     <tbody>
                         <tr class="header-row">
                             <td class="highlight-column header-column">
