--- a/views/eldr/view.html
+++ b/views/eldr/view.html
@@ -76,7 +76,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="empty-column"></th>
@@ -169,247 +169,198 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table table-bottom">
                     <tbody>
-                        <tr>
-                            <td colspan="2" class="empty-column"></td>
-                            <td class="highlight-column">
-                                <img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" height="100px" width="100px"/>
-                            </td>
-                            <td>
-                                <img src="img/Pg Linha ELDR/RCCD25A---ELDR-400V.png" height="100px" width="100px" />
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container bg-gray-dark section-header">
-        <div class="row">
-            <div class="col-xs-12">
-                <span>Características Técnicas</span>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container bg-gray-light">
-        <div class="row">
-            <div class="col-xs-12">
-                <table class="table table-bordered">
-                    <tbody>
-                        <tr>
-                            <td>Pólos</td>
-                            <td class="empty-column"></td>
+                        <tr class="header-row">
+							<td colspan="2" class="header-column"></td>
+							<td class="highlight-column header-column">
+								<img src="img/Pg Linha ELDR/RCCD63A---ELDR-230V.png" alt="ELDR 230V" height="150px" /> </br></br></br>
+							</td>
+							<td class="highlight-column-gray header-column">
+								<img src="img/Pg Linha ELDR/RCCD25A---ELDR-400V.png" alt="ELDR 400V" height="180px" /> </br></br></br>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="4" class="gray-column text-position-left">
+								<span>Características Técnicas</span>
+							</td>
+						</tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Pólos</td>
                             <td class="highlight-column">2</td>
-                            <td>4</td>
+                            <td class="highlight-column-gray">4</td>
                         </tr>
                         <tr>
-                            <td>Tipo de proteção contra corrente residual</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tipo de proteção contra corrente residual</td>
                             <td class="highlight-column">Eletromagnético</td>
-                            <td>Eletromagnético</td>
+                            <td class="highlight-column-gray">Eletromagnético</td>
                         </tr>
                         <tr>
-                            <td>Tipo de trabalho contra corrente residual</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tipo de trabalho contra corrente residual</td>
                             <td class="highlight-column">AC</td>
-                            <td>AC</td>
+                            <td class="highlight-column-gray">AC</td>
                         </tr>
                         <tr>
-                            <td>Corrente nominal </td>
-                            <td>In</td>
+                            <td class="text-position-left">Corrente nominal </td>
+                            <td class="text-position-left">In</td>
                             <td class="highlight-column">25-80A</td>
-                            <td>25-80A</td>
+                            <td class="highlight-column-gray">25-80A</td>
                         </tr>
                         <tr>
-                            <td>Corrente residual nominal </td>
-                            <td>I n</td>
+                            <td class="text-position-left">Corrente residual nominal </td>
+                            <td class="text-position-left">I n</td>
                             <td class="highlight-column">30mA</td>
-                            <td>30mA</td>
+                            <td class="highlight-column-gray">30mA</td>
                         </tr>
                         <tr>
-                            <td>Tensão nominal</td>
-                            <td>Ue</td>
+                            <td class="text-position-left">Tensão nominal</td>
+                            <td class="text-position-left">Ue</td>
                             <td class="highlight-column">230V</td>
-                            <td>400V</td>
+                            <td class="highlight-column-gray">400V</td>
                         </tr>
                         <tr>
-                            <td>Tensão de isolamento </td>
-                            <td>Ui</td>
+                            <td class="text-position-left">Tensão de isolamento </td>
+                            <td class="text-position-left">Ui</td>
                             <td class="highlight-column">500V</td>
-                            <td>500V</td>
+                            <td class="highlight-column-gray">500V</td>
                         </tr>
                         <tr>
-                            <td>Tensão de impulso estável </td>
-                            <td>Uimp</td>
+                            <td class="text-position-left">Tensão de impulso estável </td>
+                            <td class="text-position-left">Uimp</td>
                             <td class="highlight-column">6kV</td>
-                            <td>6kV</td>
+                            <td class="highlight-column-gray">6kV</td>
                         </tr>
                         <tr>
-                            <td>Tensão do ensaio elétrico</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tensão do ensaio elétrico</td>
                             <td class="highlight-column">2.5kV</td>
-                            <td>2.5kV</td>
+                            <td class="highlight-column-gray">2.5kV</td>
                         </tr>
                         <tr>
-                            <td>Frequência nominal</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Frequência nominal</td>
                             <td class="highlight-column">50/60Hz</td>
-                            <td>50/60Hz</td>
+                            <td class="highlight-column-gray">50/60Hz</td>
                         </tr>
                         <tr>
-                            <td>Corrente de curto-circuito</td>
-                            <td>Inc/ I n</td>
+                            <td class="text-position-left">Corrente de curto-circuito</td>
+                            <td class="text-position-left">Inc/ I n</td>
                             <td class="highlight-column">6000A</td>
-                            <td>6000A</td>
+                            <td class="highlight-column-gray">6000A</td>
                         </tr>
                         <tr>
-                            <td>Fusível para proteção de back-up</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Fusível para proteção de back-up</td>
                             <td class="highlight-column"> ? </td>
-                            <td> ? </td>
+                            <td class="highlight-column-gray"> ? </td>
                         </tr>
                         <tr>
-                            <td>Corrente residual nominal e capacidade de interrupção</td>
-                            <td>Im/ I m</td>
+                            <td class="text-position-left">Corrente residual nominal e capacidade de interrupção</td>
+                            <td class="text-position-left">Im/ I m</td>
                             <td class="highlight-column">500 (≤50A) - 630 (63A)</td>
-                            <td>500 (≤50A) - 630 (63A)</td>
+                            <td class="highlight-column-gray">500 (≤50A) - 630 (63A)</td>
                         </tr>
                         <tr>
-                            <td>Grau de poluição</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Grau de poluição</td>
                             <td class="highlight-column">2</td>
-                            <td>2</td>
+                            <td class="highlight-column-gray">2</td>
                         </tr>
                         <tr>
-                            <td>Vida útil elétrica</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Vida útil elétrica</td>
                             <td class="highlight-column">4000</td>
-                            <td>4000</td>
+                            <td class="highlight-column-gray">4000</td>
                         </tr>
                         <tr>
-                            <td>Vida útil mecânica</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Vida útil mecânica</td>
                             <td class="highlight-column">10000</td>
-                            <td>10000</td>
+                            <td class="highlight-column-gray">10000</td>
                         </tr>
                         <tr>
-                            <td>Indicador de posição de contacto</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Indicador de posição de contacto</td>
                             <td class="highlight-column">não</td>
-                            <td>não</td>
+                            <td class="highlight-column-gray">não</td>
                         </tr>
                         <tr>
-                            <td>Indicador de falha</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Indicador de falha</td>
                             <td class="highlight-column">sim</td>
-                            <td>sim</td>
+                            <td class="highlight-column-gray">sim</td>
                         </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container bg-gray-dark section-header">
-        <div class="row">
-            <div class="col-xs-12">
-                <span>Instalação</span>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container bg-gray-light">
-        <div class="row">
-            <div class="col-xs-12">
-                <table class="table table-bordered">
-                    <tbody>
-                        <tr>
-                            <td>Grau de protecção </td>
-                            <td>corpo do DR</td>
+						<tr>
+							<td colspan="4" class="white-column">
+								</br>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="4" class="gray-column text-position-left">
+								<span>Instalação</span>
+							</td>
+						</tr>
+						<tr>
+                            <td class="text-position-left">Grau de protecção </td>
+                            <td class="text-position-left">corpo do DR</td>
                             <td class="highlight-column">IP20</td>
-                            <td>IP20</td>
+                            <td class="highlight-column-gray">IP20</td>
                         </tr>
                         <tr>
-                            <td class="empty-column"></td>
-                            <td>instalado na caixa distribuição</td>
+                            <td></td>
+                            <td class="text-position-left">instalado na caixa distribuição</td>
                             <td class="highlight-column">IP40</td>
-                            <td>IP40</td>
+                            <td class="highlight-column-gray">IP40</td>
                         </tr>
                         <tr>
-                            <td>Temperatura ambiente</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Temperatura ambiente</td>
                             <td class="highlight-column">-5º ~+40ºC</td>
-                            <td>-5º ~+40ºC</td>
+                            <td class="highlight-column-gray">-5º ~+40ºC</td>
                         </tr>
                         <tr>
-                            <td>Temperatura de armazenamento</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Temperatura de armazenamento</td>
                             <td class="highlight-column">-25º ~+70ºC</td>
-                            <td>-25º ~+70ºC</td>
+                            <td class="highlight-column-gray">-25º ~+70ºC</td>
                         </tr>
                         <tr>
-                            <td>Tipo de conexão do terminal</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tipo de conexão do terminal</td>
                             <td class="highlight-column">Cabo / barramento</td>
-                            <td>Cabo / barramento</td>
+                            <td class="highlight-column-gray">Cabo / barramento</td>
                         </tr>
                         <tr>
-                            <td>Tamanho dos terminais para cabos</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tamanho dos terminais para cabos</td>
                             <td class="highlight-column">25mm²</td>
-                            <td>25mm²</td>
+                            <td class="highlight-column-gray">25mm²</td>
                         </tr>
                         <tr>
-                            <td>Tamanho dos terminais para barramento</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Tamanho dos terminais para barramento</td>
                             <td class="highlight-column">25mm²</td>
-                            <td>25mm²</td>
+                            <td class="highlight-column-gray">25mm²</td>
                         </tr>
                         <tr>
-                            <td>Torque de aperto</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Torque de aperto</td>
                             <td class="highlight-column">3.0</td>
-                            <td>3.0</td>
+                            <td class="highlight-column-gray">3.0</td>
                         </tr>
                         <tr>
-                            <td>Conexão</td>
-                            <td class="empty-column"></td>
+                            <td colspan="2" class="text-position-left">Conexão</td>
                             <td class="highlight-column">Superior e inferior</td>
-                            <td>Superior e inferior</td>
+                            <td class="highlight-column-gray">Superior e inferior</td>
                         </tr>
+						<tr>
+							<td colspan="4" class="white-column">
+								</br>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="4" class="gray-column text-position-left">
+								<span>Pólos</span>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="2">
+							</td>
+							<td class="highlight-column">
+								<img src="img/Pg Linha ELDR/polo-1.png" alt="Pólo 1" height="150px" />
+							</td>
+							<td>
+								<img src="img/Pg Linha ELDR/polo-2.png" alt="Pólo 2" height="150px" />
+							</td>
+						</tr>
                     </tbody>
                 </table>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container bg-gray-dark section-header">
-        <div class="row">
-            <div class="col-xs-12">
-                <span>Pólos</span>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-12">
-                <img src="img/Pg Linha ELDR/Imagem-03.jpg" alt="Dimensões" width="100%"/>
             </div>
         </div>
     </div>
