--- a/views/elps/view.html
+++ b/views/elps/view.html
@@ -54,7 +54,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th>Tensão máxima <br> de operação contínua <br> Uc (V~)</th>
@@ -104,7 +104,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="empty-column"></th>
@@ -120,7 +120,7 @@
                     <tbody>
                         <tr>
                             <td rowspan="4" class="img-column">
-                                <img src="img/Pg Linha ELPS/DPS---1-pólo.jpg" alt="ELPS 1 Pólo" height="200px" />
+                                <img src="img/Pg Linha ELPS/DPS---1-pólo.png" alt="ELPS 1 Pólo" height="150px" />
                             </td>
                             <td>1</td>
                             <td>40</td>
@@ -128,7 +128,7 @@
                             <td>II</td>
                             <td>275</td>
                             <td>1,2</td>
-                            <td>ELPS-401-275</td>
+                            <td class="highlight-column-gray">ELPS-401-275</td>
                         </tr>
                         <tr>
                             <td>2</td>
@@ -137,7 +137,7 @@
                             <td>II</td>
                             <td>275</td>
                             <td>1,2</td>
-                            <td>ELPS-402-275</td>
+                            <td class="highlight-column-gray">ELPS-402-275</td>
                         </tr>
                         <tr>
                             <td>3</td>
@@ -146,7 +146,7 @@
                             <td>II</td>
                             <td>275</td>
                             <td>1,2</td>
-                            <td>ELPS-403-275</td>
+                            <td class="highlight-column-gray">ELPS-403-275</td>
                         </tr>
                         <tr>
                             <td>4</td>
@@ -155,7 +155,7 @@
                             <td>II</td>
                             <td>275</td>
                             <td>1,2</td>
-                            <td>ELPS-404-275</td>
+                            <td class="highlight-column-gray">ELPS-404-275</td>
                         </tr>
                 </table>
             </div>
