--- a/views/fusivel_cartucho/view.html
+++ b/views/fusivel_cartucho/view.html
@@ -48,7 +48,7 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
 							<th class="empty-column"></th>
@@ -106,7 +106,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="empty-column"></th>
@@ -438,7 +438,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="empty-column"></th>
@@ -771,7 +771,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
                             <th class="empty-column"></th>
