--- a/views/elmd/view.html
+++ b/views/elmd/view.html
@@ -96,7 +96,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                 	<thead>
                 		<tr>
                 			<th class="empty-column"></th>
@@ -362,48 +362,48 @@
 	<div class="container bg-gray-light">
 		<div class="row">
             <div class="col-xs-12">
-                <table class="table table-bordered">
+                <table class="table">
                     <thead>
                         <tr>
-                            <th>Tipo</th>
+                            <th class="text-position-left">Tipo</th>
                             <th>Código</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="highlight-row-gray">
-                            <td>Contato auxiliar</td>
+                            <td class="text-position-left">Contato auxiliar</td>
                             <td>ELMD-AUX</td>
                         </tr>
 						<tr class="highlight-row-gray">
-                            <td>Contato de alarme</td>
+                            <td class="text-position-left">Contato de alarme</td>
                             <td>ELMD-ALM</td>
                         </tr>
 						<tr class="highlight-row">
-                            <td>Disparador de abertura - 230V</td>
+                            <td class="text-position-left">Disparador de abertura - 230V</td>
                             <td>ELMD-ST230</td>
                         </tr>
 						<tr class="highlight-row">
-                            <td>Disparador de abertura - 120V</td>
+                            <td class="text-position-left">Disparador de abertura - 120V</td>
                             <td>ELMD-ST120</td>
                         </tr>
 						<tr class="highlight-row">
-                            <td>Disparador de abertura - 24V</td>
+                            <td class="text-position-left">Disparador de abertura - 24V</td>
                             <td>ELMD-ST24</td>
                         </tr>
 						<tr class="highlight-row-gray">
-                            <td>Disparador de abertura - 230V</td>
+                            <td class="text-position-left">Disparador de abertura - 230V</td>
                             <td>ELMD-UV230</td>
                         </tr>
 						<tr class="highlight-row-gray">
-                            <td>Disparador de subtensão - 120V</td>
+                            <td class="text-position-left">Disparador de subtensão - 120V</td>
                             <td>ELMD-UV120</td>
                         </tr>
 						<tr class="highlight-row">
-                            <td>Disparador de subtensão - 230V</td>
+                            <td class="text-position-left">Disparador de subtensão - 230V</td>
                             <td>ELMD-OV230</td>
                         </tr>
 						<tr class="highlight-row">
-                            <td>Disparador de subtensão - 120V</td>
+                            <td class="text-position-left">Disparador de subtensão - 120V</td>
                             <td>ELMD-OV120</td>
                         </tr>
 					</tbody>
@@ -427,7 +427,7 @@
     <div class="container bg-gray-light">
         <div class="row">
             <div class="col-xs-12">
-            	<table class="table table-bordered">
+            	<table class="table">
             		<thead>
             			<tr>
             				<th class="empty-column"></th>
@@ -541,15 +541,205 @@
 
 <section>
     <div class="container bg-gray-light">
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             <div class="col-xs-5">
                 <img src="img/Pg Linha ELMD/Gráfico.jpg" alt="Gráfico Características Disparo" width="100%" />
             </div>
-            <div class="col-xs-7">
-            	<div>
-	                <p>Os minidisjuntores da linha MCB Eletromec são projetados para proteção dos circuitos de distribuição.</p>
-	                <p>Curva C - O dispositivo não deve funcionar em 0,1s com a corrente em 5 In; na corrente em 10 In deve funcionar em menos de 0.1s</p>
+            <div class="col-xs-6 col-xs-offset-1">
+            	<div style="margin-top: 100px;">
+	                <p class="black">
+						Os minidisjuntores da linha MCB Eletromec são projetados</br>
+						para proteção dos circuitos de distribuição.
+					</p> </br>
+	                <p class="black">
+						Curva C - O dispositivo não deve funcionar em 0,1s com</br>
+						a corrente em 5 In; na corrente em 10 In deve funcionar</br>
+						em menos de 0.1s.
+					</p>
             	</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="container bg-gray-light">
+        <div class="row">
+            <div class="col-xs-12">
+                <table class="table table-bottom">
+                    <tbody>
+                        <tr class="header-row">
+							<td colspan="2" class="header-column"></td>
+							<td class="highlight-column header-column">
+								<img src="img/Pg Linha ELMD/ELMD---1-pólo.png" alt="ELMD" height="150px" /> </br>
+								<span>Minidisjuntor - ELMD</span> </br></br>
+							</td>
+							<td class="highlight-column-gray header-column">
+								<img src="img/Pg Linha ELMD/ELMDH---1-pólo.png" alt="ELMD" height="180px" /> </br>
+								<span>Minidisjuntor - ELMDH</span> </br></br>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="4" class="gray-column text-position-left">
+								<span>Características Técnicas</span>
+							</td>
+						</tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Pólos</td>
+                            <td class="highlight-column">1, 2, 3, 4</td>
+                            <td class="highlight-column-gray">1, 2, 3, 4</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Característica de liberação termo-magnético</td>
+                            <td class="highlight-column">C</td>
+                            <td class="highlight-column-gray">C</td>
+                        </tr>
+                        <tr>
+                            <td class="text-position-left">Corrente nominal </td>
+                            <td class="text-position-left">In</td>
+                            <td class="highlight-column">6A - 63A</td>
+                            <td class="highlight-column-gray">80A - 125A</td>
+                        </tr>
+                        <tr>
+                            <td class="text-position-left">Tensão nominal</td>
+                            <td class="text-position-left">Ue</td>
+                            <td class="highlight-column">1P 230/400V~ - 2, 3, 4P 400V~</td>
+                            <td class="highlight-column-gray">1P 230/400V~ - 2, 3, 4P 400V~</td>
+                        </tr>
+                        <tr>
+                            <td class="text-position-left">Tensão de isolamento</td>
+                            <td class="text-position-left">Ui</td>
+                            <td class="highlight-column">500V</td>
+                            <td class="highlight-column-gray">500V</td>
+                        </tr>
+						<tr>
+                            <td class="text-position-left">Tensão máxima de trabalho</td>
+                            <td class="text-position-left">Umáx (VAC)</td>
+                            <td class="highlight-column">440V</td>
+                            <td class="highlight-column-gray">440V</td>
+                        </tr>
+						<tr>
+                            <td class="text-position-left">Tensão máxima de trabalho por pólo</td>
+                            <td class="text-position-left">Umáx (VDC)</td>
+                            <td class="highlight-column">60VDC</td>
+                            <td class="highlight-column-gray">60VDC</td>
+                        </tr>
+						<tr>
+                            <td class="text-position-left">Tensão mínima de trabalho</td>
+                            <td class="text-position-left">Umin</td>
+                            <td class="highlight-column">12V</td>
+                            <td class="highlight-column-gray">12V</td>
+                        </tr>
+						<tr>
+                            <td class="text-position-left">Tensão de impulso estável</td>
+                            <td class="text-position-left">Umin</td>
+                            <td class="highlight-column">6kV</td>
+                            <td class="highlight-column-gray">6kV</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Tensão do ensaio elétrico</td>
+                            <td class="highlight-column">2kV</td>
+                            <td class="highlight-column-gray">2kV</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Frequência nominal</td>
+                            <td class="highlight-column">50/60Hz</td>
+                            <td class="highlight-column-gray">50/60Hz</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Capacidade de interrupção nominal (IEC 60868 / IEC 60947-2)</td>
+                            <td class="highlight-column">3kA / 4,5kA</td>
+                            <td class="highlight-column-gray">6kA / 6kA</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Grau de poluição</td>
+                            <td class="highlight-column">2</td>
+                            <td class="highlight-column-gray">2</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Vida útil elétrica</td>
+                            <td class="highlight-column">4000</td>
+                            <td class="highlight-column-gray">1500 (In=63, 80, 100A) 1000 (In=125A)</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Vida útil mecânica</td>
+                            <td class="highlight-column">10000</td>
+                            <td class="highlight-column-gray">8500 (In=63, 80, 100A) 7000 (In=125A)</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Indicador de posição de contato</td>
+                            <td class="highlight-column">Sim</td>
+                            <td class="highlight-column-gray">Sim</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Indicador de falha</td>
+                            <td class="highlight-column">Não</td>
+                            <td class="highlight-column-gray">Não</td>
+                        </tr>
+						<tr>
+							<td colspan="4" class="white-column">
+								</br>
+							</td>
+						</tr>
+						<tr>
+							<td colspan="4" class="gray-column text-position-left">
+								<span>Instalação</span>
+							</td>
+						</tr>
+						<tr>
+                            <td class="text-position-left">Grau de protecção </td>
+                            <td class="text-position-left">corpo do disjuntor</td>
+                            <td class="highlight-column">IP20</td>
+                            <td class="highlight-column-gray">IP20</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="text-position-left">instalado na caixa distribuição</td>
+                            <td class="highlight-column">IP40</td>
+                            <td class="highlight-column-gray">IP40</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Temperatura de referência para a colocação do elemento térmico</td>
+                            <td class="highlight-column">30ºC</td>
+                            <td class="highlight-column-gray">30ºC</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Temperatura ambiente (com média diária ≤ 35ºC)</td>
+                            <td class="highlight-column">-5º ~+40ºC</td>
+                            <td class="highlight-column-gray">-5º ~+40ºC</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Temperatura de armazenamento</td>
+                            <td class="highlight-column">25º ~+70ºC</td>
+                            <td class="highlight-column-gray">25º ~+70ºC</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Tipo de conexão do terminal</td>
+                            <td class="highlight-column">Cabo / barramento</td>
+                            <td class="highlight-column-gray">Cabo / barramento</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Tamanho dos terminais para cabos</td>
+                            <td class="highlight-column">25mm²</td>
+                            <td class="highlight-column-gray">50mm²</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Tamanho dos terminais para barramento</td>
+                            <td class="highlight-column">-</td>
+                            <td class="highlight-column-gray">-</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" class="text-position-left">Torque de aperto</td>
+                            <td class="highlight-column">3.0</td>
+                            <td class="highlight-column-gray">3.5</td>
+                        </tr>
+						<tr>
+                            <td colspan="2" class="text-position-left">Conexão</td>
+                            <td class="highlight-column">Superior e inferior</td>
+                            <td class="highlight-column-gray">Superior e inferior</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
