--- a/views/elmd/view.html
+++ b/views/elmd/view.html
@@ -56,7 +56,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <img src="img/Pg Linha ELMD/Linha-MCB---Disjuntor-Explodido.jpg" alt="Linha MCB Disjuntor" width="100%"/>
+                <img src="img/Pg Linha ELMD/Linha-MCB---Disjuntor-Explodido.png" alt="Linha MCB Disjuntor" width="100%"/>
             </div>
         </div>
     </div>
