Inclusão de imagem na página de ELDR

--- a/views/eldr/view.html
+++ b/views/eldr/view.html
@@ -248,8 +248,12 @@
                         </tr>
                         <tr>
                             <td colspan="2" class="text-position-left">Fusível para proteção de back-up</td>
-                            <td class="highlight-column"> ? </td>
-                            <td class="highlight-column-gray"> ? </td>
+                            <td class="highlight-column">
+								<img src="img/Pg Linha ELDR/ELDR_3.png" alt="ELDR" height="12px" />
+							</td>
+                            <td class="highlight-column-gray">
+								<img src="img/Pg Linha ELDR/ELDR_3.png" alt="ELDR" height="12px" />
+							</td>
                         </tr>
                         <tr>
                             <td class="text-position-left">Corrente residual nominal e capacidade de interrupção</td>
