--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <span>FALTA A IMAGEM</span>
+                <img src="img/Pg Linha ELCM/ELCM.jpg" alt="ELCM" width="100%" />
             </div>
         </div>
     </div>
