Inclusão de imagem na tela de ELCM

--- a/views/elcm/view.html
+++ b/views/elcm/view.html
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <img src="img/Pg Linha ELCM/ELCM.jpg" alt="ELCM" width="100%" />
+                <img src="img/Pg Linha ELCM/ELCM_1.jpg" alt="ELCM" width="100%" />
             </div>
         </div>
     </div>
