--- a/views/footer.html
+++ b/views/footer.html
@@ -1,5 +1,5 @@
 <section>
-    <div class="container">
+    <div class="container" style="margin-bottom: 0;">
         <div class="row">
             <div class="col-xs-12">
 				<footer id="footer">
