--- a/less/creative.less
+++ b/less/creative.less
@@ -357,25 +357,25 @@ table {
 	border-top: 0;
 	li {
 		padding: 0 15px;
-	}
-	li > a {
-		color: @theme-primary-light;
-		font-size: 14px;
-	}
-	li > a:hover {
-		text-decoration: underline;
-		background-color: @gray-light;
-		color: @theme-primary-light;
-	}
-	li > .title, li > .title:hover {
-		background-color: @theme-primary-light;
-		color: white;
-		font-family: EatonMed;
-	}
-	li > .secundary-title, li > .secundary-title:hover {
-		background-color: @gray;
-		color: @theme-primary-light;
-		font-family: EatonMed;
+		.title, .title:hover {
+			background-color: @theme-primary-light;
+			color: white;
+			font-family: EatonMed;
+		}
+		.secundary-title, .secundary-title:hover {
+			background-color: @gray;
+			color: @theme-primary-light;
+			font-family: EatonMed;
+		}
+		a {
+			color: @theme-primary-light;
+			font-size: 14px;
+		}
+		a:hover {
+			text-decoration: underline;
+			background-color: @gray-light;
+			color: @theme-primary-light;
+		}
 	}
 }
 
